# irml

./: README  README~
pointclouds/database/: README
pointclouds/database/3dmodelsLabeled/: 3d_s002.ply  3d_t003.ply  3d_u001.ply  3d_u002.ply  3d_u004.ply
pointclouds/database/3dmodelsviews/: 3d_c001_000.pcd  3d_c001_003.pcd  3d_c001_004.pcd  3d_c001_007.pcd  3d_c001_012.pcd  3d_c002_001.pcd  3d_c002_003.pcd  3d_c002_004.pcd  3d_c002_006.pcd  3d_c002_009.pcd  3d_c002_010.pcd  3d_c003_001.pcd  3d_c003_006.pcd  3d_c003_007.pcd  3d_c003_008.pcd  3d_c003_009.pcd  3d_c003_010.pcd  3d_c003_011.pcd  3d_c003_012.pcd  3d_c004_000.pcd  3d_c004_003.pcd  3d_c004_007.pcd  3d_c004_008.pcd  3d_s001_000.pcd  3d_s001_001.pcd  3d_s001_002.pcd  3d_s001_003.pcd  3d_s001_005.pcd  3d_s001_007.pcd  3d_s001_009.pcd  3d_s001_011.pcd  3d_s001_012.pcd  3d_s002_001.pcd  3d_s002_003.pcd  3d_s002_008.pcd  3d_s002_011.pcd  3d_s002_012.pcd  3d_s003_002.pcd  3d_s003_003.pcd  3d_s003_004.pcd  (+54 more)
pointclouds/database/cloudsLabeled/: c001_002.pcd  c001_003.pcd  c001_004.pcd  c001_006.pcd  c001_009.pcd  c002_002.pcd  c002_004.pcd  c002_006.pcd  c002_007.pcd  c002_009.pcd  c002_010.pcd  c004_001.pcd  c004_002.pcd  c004_007.pcd  c004_008.pcd  c005_001.pcd  c005_003.pcd  c005_006.pcd  c005_007.pcd  c005_008.pcd  c005_010.pcd  c005_011.pcd  c008_001.pcd  c008_002.pcd  c008_003.pcd  c008_004.pcd  c008_005.pcd  c008_006.pcd  c008_007.pcd  c008_008.pcd  c008_009.pcd  c008_010.pcd  c009_001.pcd  c009_002.pcd  c009_003.pcd  c009_004.pcd  c009_005.pcd  c009_006.pcd  c009_007.pcd  c009_008.pcd  (+46 more)
pointclouds/database/cloudsLabeledHQ/: c001_001.pcd  c001_002.pcd  c001_003.pcd  c001_004.pcd  c001_005.pcd  c001_006.pcd  c001_007.pcd  c001_008.pcd  c001_009.pcd  c001_010.pcd  c002_001.pcd  c002_002.pcd  c002_003.pcd  c002_004.pcd  (+97 more)
pointclouds/kinectdata_processing/: README  README~
pointclouds/kinectdata_processing/3dreconstructor/: CMakeLists.txt  main.cpp  rawDepth.h
pointclouds/kinectdata_processing/fullxmlreader/: CMakeLists.txt  main.cpp
pointclouds/kinectdata_processing/fullxmlreader/output/: objects.txt
pointclouds/kinectdata_processing/object_extractor/: CMakeLists.txt
pointclouds/kinectdata_processing/object_extractor/inc/: diranalyzer.h  rawDepth.h  xmlobject.h  ymlobject.h
pointclouds/kinectdata_processing/object_extractor/src/: main.cpp  scene.cpp  ymlobject.cpp
pointclouds/kinectdata_processing/object_extractor_full/: CMakeLists.txt
pointclouds/kinectdata_processing/object_extractor_full/inc/: imgcoord.h  scene.h  ymlobject.h
pointclouds/kinectdata_processing/object_extractor_full/output/images/: README
pointclouds/kinectdata_processing/object_extractor_full/src/: main.cpp  xmlobject.cpp  ymlobject.cpp
pointclouds/kinectdata_processing/xmlreader/: CMakeLists.txt  main.cpp
pointclouds/processing/: README  README~
pointclouds/processing/save_vfh/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  cmake_install.cmake  save_vfh  save_vfh.cpp
pointclouds/processing/save_vfh/VFH/: c001_004_feat.pcd  c001_005_feat.pcd  c001_006_feat.pcd  c001_009_feat.pcd  c001_010_feat.pcd  c002_001_feat.pcd  c002_002_feat.pcd  c002_005_feat.pcd  c002_009_feat.pcd  c002_010_feat.pcd  c004_001_feat.pcd  c004_003_feat.pcd  c004_005_feat.pcd  c004_008_feat.pcd  c005_004_feat.pcd  c005_005_feat.pcd  c005_006_feat.pcd  s001_001_feat.pcd  s001_002_feat.pcd  s001_006_feat.pcd  s001_007_feat.pcd  s001_010_feat.pcd  s001_011_feat.pcd  s001_015_feat.pcd  s002_001_feat.pcd  s002_006_feat.pcd  s002_007_feat.pcd  s002_010_feat.pcd  s002_012_feat.pcd  s002_013_feat.pcd  s002_015_feat.pcd  t002_001_feat.pcd  t002_003_feat.pcd  t002_006_feat.pcd  u001_002_feat.pcd  u001_003_feat.pcd  u001_006_feat.pcd  u001_008_feat.pcd  u001_009_feat.pcd  u002_004_feat.pcd  (+6 more)
pointclouds/processing/viewpoints/: CMakeLists.txt  CMakeLists.txt~  labviewpoints.cpp  viewpoints.cpp
(+789 files in other folders)
